Reg2Run Tool Changelog

2.0.2.0 (-)

[+] Exception serialization
[+] -r parameter now can be set either as flag and value.
Flag indicates to start specified application on successful import; value will be passed as argument to starting application.

[~] Reading parameter's value by role moved to ParameterContainer.ReadParameter()
[~] ImportObject creation based on given parameters moved to static ImportObject.Parse()

2.0.1.0 (2008.12.13)

[+] Initial public release